# bda_tt

./: .env.example  Dockerfile  Dockerfile.api  Dockerfile.bot  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
src/: config.py  db.py  main.py  models.py  scheduler.py  schemas.py
src/bot/: config.py  handlers.py  keyboards.py  main.py  services.py  states.py
src/repositories/: products.py
src/routers/: products.py  subscriptions.py  wb_products.py
src/services/: scheduler.py  subscription.py  wildberries.py
