[tool.poetry]
name = "bda-tt"
version = "0.1.0"
description = ""
authors = ["Sergei Demchenko <hb13718@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
aiogram = "^3.17.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
apscheduler = "^3.11.0"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
